# Projektas1

./: Antraste.h  CMakeLists.txt  Failas.cpp  Failas.h  Patikrinimas.cpp  Patikrinimas.h  README.md  Rezultatai_Tinginiai_Studentai 1000.txt  Skaiciavimai.cpp  Skaiciavimai.h  Source.cpp  Spausdinimas.cpp  Spausdinimas.h  Studentai 1000.txt  Studentai 10000.txt  Studentas.h  Uzklausos.cpp  Uzklausos.h  Uzpildymas.cpp  Uzpildymas.h  V0.5.01.sln  V1.0.01.sln  V1.0.01.vcxproj  kursiokai.txt  rezultatai.txt  v.01.sln  v.01_naujas.sln  v.02.sln  v.03_bandymas.sln  v.04.sln  v.04.vcxproj  v.05_naujas.sln  v1.0_naujas.sln  v1.0_naujas.vcxproj
v.01/: Source.cpp  v.01.vcxproj
v.01_naujas/: Source.cpp  v.01_naujas.vcxproj
v.02/: Source.cpp  v.02.vcxproj
v.03_bandymas/: Antraste.h  Failas.cpp  Failas.h  Main.cpp  Patikrinimas.cpp  Patikrinimas.h  Skaiciavimai.cpp  Skaiciavimai.h  Spausdinimas.cpp  Spausdinimas.h  Studentas.h  Uzklausos.cpp  Uzklausos.h  Uzpildymas.cpp  Uzpildymas.h  rezultatai.txt  v.03_bandymas.vcxproj
v.04/: Rezultatai_Protingi_Studentai 1000.txt
v.05_naujas/: Antraste.h  Failas.cpp  Failas.h  Skaiciavimai.h  Source.cpp  Spausdinimas.cpp  Spausdinimas.h  Studentas.h  Uzklausos.h  V0.5.01.vcxproj  v.05_naujas.vcxproj
