cmake_minimum_required(VERSION 3.20)

project("V1.0_bandymas_nr2")

add_executable("${PROJECT_NAME}" "C:/Users/ugneo/c++ failai/v1.0_bandymas_nr2/v1.0_bandymas_nr2/Failas.cpp" "C:/Users/ugneo/c++ failai/v1.0_bandymas_nr2/v1.0_bandymas_nr2/Patikrinimas.cpp" "C:/Users/ugneo/c++ failai/v1.0_bandymas_nr2/v1.0_bandymas_nr2/Skaiciavimai.cpp" "C:/Users/ugneo/c++ failai/v1.0_bandymas_nr2/v1.0_bandymas_nr2/Source.cpp" "C:/Users/ugneo/c++ failai/v1.0_bandymas_nr2/v1.0_bandymas_nr2/Spausdinimas.cpp" "C:/Users/ugneo/c++ failai/v1.0_bandymas_nr2/v1.0_bandymas_nr2/Studentas.cpp" "C:/Users/ugneo/c++ failai/v1.0_bandymas_nr2/v1.0_bandymas_nr2/Uzklausos.cpp" "C:/Users/ugneo/c++ failai/v1.0_bandymas_nr2/v1.0_bandymas_nr2/Uzpildymas.cpp")