cmake_minimum_required(VERSION 3.20)

project("V1.0.01")

add_executable("${PROJECT_NAME}" "C:/Users/ugneo/c++ failai/V1.0.01/V1.0.01/Failas.cpp" "C:/Users/ugneo/c++ failai/V1.0.01/V1.0.01/Patikrinimas.cpp" "C:/Users/ugneo/c++ failai/V1.0.01/V1.0.01/Skaiciavimai.cpp" "C:/Users/ugneo/c++ failai/V1.0.01/V1.0.01/Source.cpp" "C:/Users/ugneo/c++ failai/V1.0.01/V1.0.01/Spausdinimas.cpp" "C:/Users/ugneo/c++ failai/V1.0.01/V1.0.01/Studentas.cpp" "C:/Users/ugneo/c++ failai/V1.0.01/V1.0.01/Uzklausos.cpp" "C:/Users/ugneo/c++ failai/V1.0.01/V1.0.01/Uzpildymas.cpp")